basic setup always pointing at dev

--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,6 @@
         <script src="js/routes.js"></script>
         <script src="js/directives/app-header.js"></script>
         <script src="js/controllers/todo-index-controller.js"></script>
+        <script src="js/services/todo.js"></script>
     </body>
 </html>
